k8s/rustadmin/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustadmin-api
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustadmin-api
  template:
    metadata:
      labels:
        app: rustadmin-api
    spec:
      containers:
      - name: rustadmin-api
        image: mikeder/rustadmin:api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rustadmin-api
  namespace: homelab
spec:
  selector:
    app: rustadmin-api
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustadmin-api
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: homelab-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - rustadmin.sqweeb.net
    secretName: rustadmin-api-tls
  rules:
  - host: rustadmin.sqweeb.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rustadmin-api
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustadmin-site
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustadmin-site
  template:
    metadata:
      labels:
        app: rustadmin-site
    spec:
      containers:
      - name: rustadmin-site
        image: mikeder/rustadmin:site
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rustadmin-site
  namespace: homelab
spec:
  selector:
    app: rustadmin-site
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustadmin-site
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: homelab-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - rust.sqweeb.net
    secretName: rustadmin-site-tls
  rules:
  - host: rust.sqweeb.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rustadmin-site
            port:
              number: 80
